# CppND-System-Monitor

./: .gitignore  CMakeLists.txt  Makefile  test  test.cpp
include/: format.h  linux_parser.h  process.h  system.h
mock_proc/: cmdline  cpuinfo  laptoptest  laptoptest.cpp  meminfo  memtest  memtest.cpp  passwd  proccesses.cpp  stat  test  test.cpp  uptime  uptimetest  uptimetest.cpp  version
src/common/: format.cpp  linux_parser.cpp  main.cpp  process.cpp  processor.cpp  system.cpp
src/macos/: ncurses_display_mac.cpp
